Implemented some commands.. Even more to do :/
git-svn-id: file:///C/Users/Johannes/dev/oldsvn/svns/ChatPlugin/trunk@4 c4a54c13-e6cc-4b09-a956-b928f6ca9497

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -25,7 +25,7 @@ commands:
            Example: /<command> - Lists all players and irc users in your current channel
            Example: /<command> s - List all users in the channel s
   mme:
-    description: sends a action to a player
+    description: sends a action to a player - /msg and /me in one command
     usage: |
            /<command> <player> <message>
            Example: /<command> SlowPlayer is waiting for you - Sends "* Player is waiting for you" to SlowPlayer 
